<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="resp"
            type="tiger.spike.model.MarkerResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <TextView
            android:id="@+id/title"
            style="@style/TextBody"
            android:text="@string/note"
            android:textAppearance="@style/TextAppearance.Bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/address"
            style="@style/TextBody"
            android:text="@{resp.component1()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="Brown Street, Ashfield" />

        <View
            android:id="@+id/sep1"
            style="@style/SectionSeparator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <TextView
            android:id="@+id/open_hr_title"
            style="@style/TextBody"
            android:layout_marginTop="12dp"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.Bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sep1" />

        <TextView
            android:id="@+id/open_hr_label"
            style="@style/TextBody"
            android:text="@{resp.component2()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/open_hr_title"
            tools:text="Open today" />

        <View
            android:id="@+id/sep2"
            style="@style/SectionSeparator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/open_hr_label" />

        <TextView
            android:id="@+id/fees_title"
            style="@style/TextBody"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.Bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sep2"
            android:text="@string/address" />

        <TextView
            android:id="@+id/fees_label"
            style="@style/TextBody"
            android:text="@{resp.component3()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fees_title" />

        <Button
            android:id="@+id/direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fees_label"
            android:text="@string/get_direction" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>